--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <hr>
       <div class="contact-me">
         <h2>Get In Touch</h2>
-        <p>If you would like to work on a project, or are interested in hiring a practiced programmer, lets talk!</p>
+        <p>If you are looking for an experienced tutor, or would like to work on a project, lets talk!</p>
         <a class="btn" href="mailto:andrew.wong8@icloud.com">CONTACT ME</a>
       </div>
     </div>
