Changing teaching/tutoring to teaching

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <img class="skill-gif" src="https://media3.giphy.com/media/bTrTnPMPq8UORCrBWG/200w.webp?cid=ecf05e47bg4n6hgdgijuzwbuvmpx4cvxt1wbaakggg85t247&rid=200w.webp&ct=g" alt="">
           <table align= center cellspacing='10'>
             <tr>
-              <td id="left-skill">⭐ Teaching/Tutoring</td>
+              <td id="left-skill">⭐ Teaching</td>
               <td>Programming</td>
               <td id="right-skill">UI and UX Design ⭐</td>
               <td>
