Reworded biography to be more accurate.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <img class="profile-picture" src="images/Andrew_Wong_head.jpeg" alt="Picture of Andrew Wong.">
         <div class="profile-text">
           <p>I am a bioinformatics (Computer Science and Biology) student studying at the University of Toronto.</p>
-          <p>Whether it is in research, medicine, or technology, my professional interests are grounded in improving quality of life. I consider myself exceptionally lucky to be passionate about my work.</p>
+          <p>Whether it is in research, medicine, or technology, my professional interests are grounded in improving quality of life. I sincerely enjoy the work I do, and aim to find others who share my enthusiasm.</p>
         </div>
       </div>
       <hr>
