--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="top-container">
       <img class="top-cloud" src="images/cloud.png" alt="">
       <h1>Andrew Wong</h1>
-      <h2 id="sub_title">tutor and web developer.</h2>
+      <h2 id="sub_title">teacher and web developer.</h2>
       <img class="bottom-cloud" src="images/cloud.png" alt="">
       <img src="images/mountain.png" alt="">
     </div>
