Title changes and added experience

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="top-container">
       <img class="top-cloud" src="images/cloud.png" alt="">
       <h1>Andrew Wong</h1>
-      <h2 id="sub_title">teacher and web developer.</h2>
+      <h2 id="sub_title">tutor and web developer.</h2>
       <img class="bottom-cloud" src="images/cloud.png" alt="">
       <img src="images/mountain.png" alt="">
     </div>
@@ -23,7 +23,7 @@
       <div class="profile">
         <img class="profile-picture" src="images/Andrew_Wong_head.jpeg" alt="Picture of Andrew Wong.">
         <div class="profile-text">
-          <p>I am a bioinformatics (Computer Science and Biology) student studying at the University of Toronto.</p>
+          <p>I am a Computer Science and Bioinformatics (Software development for biology) student studying at the University of Toronto.</p>
           <p>Whether it is in research, medicine, or technology, my professional interests are grounded in improving quality of life. I sincerely enjoy the work I do, and aim to find others who share my enthusiasm.</p>
         </div>
       </div>
@@ -55,13 +55,17 @@
         </div>
         <h2>Experience</h2>
         <div class="work-experience">
-              <table align= center cellspacing='10'>
+              <table align= center cellspacing='20'>
                 <thead>
                   <tr>
                     <th>Dates</th>
                     <th>Work</th>
                 </thead>
                 <tbody>
+                  <tr>
+                    <td>2022-Present</td>
+                    <td>Full Stack Developer | EI Amplified</td>
+                  </tr>
                   <tr>
                     <td>2022-Present</td>
                     <td>Computer Science and Math Tutor | TeacherOn</td>
@@ -72,7 +76,7 @@
                   </tr>
                   <tr>
                     <td>2021-2022</td>
-                    <td>Residence House Representative | University of Toronto</td>
+                    <td>Residence Representative | University of Toronto</td>
                   </tr>
                   <tr>
                     <td>2019-2021</td>
@@ -90,7 +94,7 @@
       <hr>
       <div class="contact-me">
         <h2>Get In Touch</h2>
-        <p>If you are looking for an experienced tutor, or would like to work on a project, lets talk!</p>
+        <p>If you're looking for an entheusiastic developer, or would like to work on a project with me, lets talk!</p>
         <a class="btn" href="mailto:andrew.wong8@icloud.com">CONTACT ME</a>
       </div>
     </div>
